[tool.poetry]
name = "defect_location_detection"
version = "0.1.0"
description = ""
authors = ["r-shcherbakov"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
tsfresh = "^0.19.0"
pycaret = "^2.3.6"
shap = "^0.40.0"
umap-learn = "^0.5.2"
catboost = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
